# motion-tracking-system

./: .gitmodules  README.md  requirements.txt  robust_arm_tracker.py
C_implementation/: .bazelrc  BUILD  BUILD.bazel  CMakeLists.txt  WORKSPACE  arm_tracker.cpp  arm_tracker.hpp  main.cpp  mediapipe_fixes.patch
C_implementation/include/: arm_tracker.hpp  kalman_filter.hpp  visualizer.hpp
C_implementation/mediapipe_patched/mediapipe/mediapipe/framework/: BUILD.rej
C_implementation/mediapipe_patched/mediapipe/mediapipe/framework/formats/: BUILD.rej
C_implementation/src/: arm_tracker.cpp
C_with_key_bindings/: CMakeLists.txt  requirements.txt
C_with_key_bindings/include/: arm_tracker.hpp  clay.h  clay_ui_wrapper.hpp  kalman_filter.hpp  mediapipe_wrapper.hpp  ui_wrapper.hpp  visualizer.hpp
C_with_key_bindings/src/: arm_tracker.cpp  bindings.cpp  clay_impl.cpp  clay_ui_wrapper.cpp  main.cpp
