load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "arm_tracker_lib",
    srcs = ["src/arm_tracker.cpp"],
    hdrs = [
        "include/arm_tracker.hpp",
        "include/kalman_filter.hpp",
        "include/visualizer.hpp",
    ],
    includes = ["include"],
    deps = [
        "@opencv//:opencv",
        "@eigen//:eigen",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@mediapipe//mediapipe/framework:calculator_framework",
        "@mediapipe//mediapipe/framework/formats:landmark",
    ],
    copts = [
        "-std=c++17",
        "-I$(GENDIR)",
        "-I.",
        "-Imediapipe",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "arm_tracker",
    srcs = ["src/main.cpp"],
    deps = [
        ":arm_tracker_lib",
    ],
    copts = ["-std=c++17"],
)